# YOLOv8Det

./: CMakeLists.txt  README.md  main_OOP.cpp  main_classes.cpp  main_function.cpp
yolov8/: FrameProcessor.h  FrameQueue.h  FrameResult.h  ResultSaver.h  VideoReader.h
